# taxi-data-ingestion

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
docker/pgadmin/: servers.json
notebooks/: 250126-connect-pg.ipynb  250126-ingest-taxi-data.ipynb
scripts/docker/: run-container-ingest-data.sh  run-if-docker-compose-is-not-existed.sh  tmp-postgres.sh
src/: settings.py
src/pipelines/: ingest.py
